# PokePlusPlus

./: .gitignore  CMakeLists.txt  CMakePresets.json  PokePlusPlus.h  output.txt  readme.md
assets/models/: pokeball.mtl
assets/models/pokemon/: charmander.mtl  squirtle.mtl
include/pokeapp/: App.h  Constants.h  FS.h  Material.h  Mesh.h  Model.h  Pokeball.h  Pokemon.h  PokemonController.h  Shader.h  Texture.h  World.h
installation/windows/assets/models/pokemon/: 001.mtl
installation/windows/shaders/: unlit.frag
shaders/: phong.frag  phong.vert  unlit.vert
src/: main.cpp
src/core/: App.cpp  FS.cpp  Material.cpp  Mesh.cpp  Model.cpp  Pokemon.cpp  PokemonController.cpp  Shader.cpp  Texture.cpp  World.cpp  tiny_obj_loader.cpp
